# NxNCube

./: .gitignore  CMakeLists.txt  Makefile  NxNCube.cpp  NxNCube.h  README.md  game.cpp  main.cpp
.cache/clangd/index/: NxNCube.cpp.4A3E24E09766E74F.idx  NxNCube.hpp.06E5190858EAC3F7.idx  game.cpp.7D8217212E4C591F.idx
inc/: NxNCube.hpp  util.hpp
include/: CubeController.hpp  NxNCube.hpp  util.hpp
src/: CubeController.cpp  NxNCube.cpp  NxNCube.h  NxNCube.hpp  driver.cpp  game.cpp  util.cpp
src/util/: util.cpp  util.hpp
